--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ lto = true
 codegen-units = 1
 
 [dependencies]
+biblatex = "0.4.1"
 yarner-lib = { git = "https://github.com/mlange-42/yarner.git", tag = "0.5.0" }
