--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ biblatex = "0.4.1"
 regex = "1.4"
 once_cell = "1.5"
 linked_hash_set = "0.1.4"
+toml = { version = "0.5" }
 yarner-lib = { git = "https://github.com/mlange-42/yarner.git", tag = "0.5.0" }
