--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ biblatex = "0.4.1"
 regex = "1.4"
 once_cell = "1.5"
 linked_hash_set = "0.1.4"
-toml = { version = "0.5" }
+toml = "0.5"
+path-clean = "0.1"
+pathdiff = "0.2"
 yarner-lib = { git = "https://github.com/mlange-42/yarner.git", tag = "0.5.0" }
