--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ codegen-units = 1
 biblatex = "0.4.1"
 regex = "1.4"
 once_cell = "1.5"
-linked_hash_set = "0.1.4"
+linked-hash-map = "0.5.4"
 toml = "0.5"
 path-clean = "0.1"
 pathdiff = "0.2"
